# GunStore

./: CMakeLists.txt  README.md
createBD/: CreatUser.sql  GunStore.sql  InsertGunStore.sql  procedurAndFunction.sql
resources/: appicon.rc  images.qrc
src/: LayoutState.h  WindowState.h  connectionhandler.cpp  connectionhandler.h  filter.cpp  filter.h  main.cpp  printer.cpp  printer.h
src/Mediator/: mainwindowmediator.cpp  mainwindowmediator.h
src/Model/: buyermodel.cpp  buyermodel.h  employeesmodel.cpp  employeesmodel.h  productmodel.cpp  productmodel.h  suppliermodel.cpp  suppliermodel.h
src/Model/base/: basemodel.cpp  basemodel.h
src/View/: addbuyer.cpp  addbuyer.h  addbuyer.ui  addnewemployees.cpp  addnewemployees.h  addnewemployees.ui  addnewsupplier.cpp  addnewsupplier.h  addnewsupplier.ui  addproduct.cpp  addproduct.h  addproduct.ui  addproductdialog.cpp  addproductdialog.h  addproductdialog.ui  buyproduct.cpp  buyproduct.h  buyproduct.ui  formforempty.cpp  formforempty.h  formforempty.ui  login.cpp  login.h  login.ui  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menusupplier.h  menusupplier.ui  ordering.cpp  ordering.h  ordering.ui
src/View/Delegates/: delegatefortableview.cpp  delegatefortableview.h  delegatefortableviewproduct.cpp  delegatefortableviewproduct.h  delegatefortableviewworker.cpp  delegatefortableviewworker.h  delegatetableviewdouble.cpp  delegatetableviewdouble.h
src/View/Interface/: IClose.h  isearch.h  iview.h
src/View/MenuAdmin/: addcharact.cpp  addcharact.h  addcharact.ui  formpeople.cpp  formpeople.h  formpeople.ui  formwithtable.cpp  formwithtable.h  formwithtable.ui  infoemployees.cpp  infoemployees.h  infoemployees.ui  menuadmin.cpp  menuadmin.h  menuadmin.ui  menubuyer.cpp  menubuyer.h  menubuyer.ui  menueditproduct.cpp  menueditproduct.h  menueditproduct.ui  menuemployees.cpp  menuemployees.h  menuemployees.ui  menureport.cpp  menureport.h  menureport.ui  menusupplier.cpp  menusupplier.h  menusupplier.ui
src/View/ViewElement/: centerednotification.cpp  centerednotification.h  centerednotification.ui  elementbuyproduct.cpp  elementbuyproduct.h  elementbuyproduct.ui  elementcharacteristic.cpp  elementcharacteristic.h  elementcharacteristic.ui  elementorder.cpp  elementorder.h  elementorder.ui  elementpeople.cpp  elementpeople.h  elementpeople.ui  formwithbuttonback.cpp  formwithbuttonback.h  formwithbuttonback.ui
src/ViewModel/: addemployeesviewmodel.cpp  addemployeesviewmodel.h  addproductdialogviewmodel.cpp  addproductdialogviewmodel.h  buyproductviewmodel.cpp  buyproductviewmodel.h  loginviewmodel.cpp  loginviewmodel.h  mainmenuviewmodel.cpp  mainmenuviewmodel.h  menueditproductviewmodel.cpp  menueditproductviewmodel.h  menuemployeesviewmodel.cpp  menuemployeesviewmodel.h  menusupplierviewmodel.cpp  menusupplierviewmodel.h
src/ViewModel/base/: baseviewmodel.cpp  baseviewmodel.h  baseviewmodelforproduct.cpp  baseviewmodelforproduct.h
